package pt.ipp.isep.dei.esoft.pot.model;

import java.io.Serializable;
import java.util.Timer;

/**
 * The type Timer T4J.
 *
 * @author Berkelios
 */
public class TimerT4J extends Timer implements Serializable {

    /**
     * Instantiates a new Timer T4J.
     */
    public TimerT4J() {
        super();
    }
}
